--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </header>
 <div class="hero-section">
     <div class="hero-msg">
-        <p>You are on amazon.com. You can also go to Amazon India for million of products with fast local delivery <a href="https://www.amazon.in/">Click here to go amazon.in</a></p>
+        <p>You are on amazon.com. You can also go to Amazon Pakistan for million of products with fast local delivery <a href="https://www.amazon.in/">Click here to go amazon.in</a></p>
     </div>
 
 </div>
