--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
     <div class="box">
         <div class="box-content">
             <h2>Clothes</h2>
-        <div class="box-img" style="background-image: url(/images/box1_image.jpg);"></div>
+        <div class="box-img" style="background-image: url(./images/box1_image.jpg);"></div>
         <p>See more</p>
         </div>
     </div>
     <div class="box"> 
         <div class="box-content">
         <h2>Health and Personal Care</h2>
-    <div class="box-img" style="background-image: url(/images/box2_image.jpg);"></div>
+    <div class="box-img" style="background-image: url(./images/box2_image.jpg);"></div>
     <p>See more</p>
     </div></div>
     <div class="box">
         <div class="box-content">
             <h2>Home and Kitchen</h2>
-        <div class="box-img" style="background-image: url(/images/box3_image.jpg);"></div>
+        <div class="box-img" style="background-image: url(./images/box3_image.jpg);"></div>
         <p>See more</p>
         </div>
     </div>
     <div class="box">
         <div class="box-content">
             <h2>New Phones</h2>
-        <div class="box-img" style="background-image: url(/images/box4_image.jpg);"></div>
+        <div class="box-img" style="background-image: url(./images/box4_image.jpg);"></div>
         <p>See more</p>
         </div>
         
@@ -97,27 +97,27 @@
     <div class="box">
         <div class="box-content">
             <h2>Beauty Picks</h2>
-        <div class="box-img" style="background-image: url(/images/box5_image.jpg);"></div>
+        <div class="box-img" style="background-image: url(./images/box5_image.jpg);"></div>
         <p>See more</p>
         </div>
     </div>
     <div class="box"> 
         <div class="box-content">
         <h2>Cat and Dog Food</h2>
-    <div class="box-img" style="background-image: url(/images/box6_image.jpg);"></div>
+    <div class="box-img" style="background-image: url(./images/box6_image.jpg);"></div>
     <p>See more</p>
     </div></div>
     <div class="box">
         <div class="box-content">
             <h2>Kids Toy</h2>
-        <div class="box-img" style="background-image: url(/images/box7_image.jpg);"></div>
+        <div class="box-img" style="background-image: url(./images/box7_image.jpg);"></div>
         <p>See more</p>
         </div>
     </div>
     <div class="box">
         <div class="box-content">
             <h2>New Fashion Picks</h2>
-        <div class="box-img" style="background-image: url(/images/box8_image.jpg);"></div>
+        <div class="box-img" style="background-image: url(./images/box8_image.jpg);"></div>
         <p>See more</p>
         </div>
         
